// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button.js should render component and match snapshot 1`] = `

<button class="pt-button default">
  Default button
</button>

`;

exports[`Button.js should render component with intend prop and match snapshot 1`] = `

<button class="pt-button pt-intend-primary">
  Default button
</button>

`;

exports[`Button.js should render component with intent prop and match snapshot 1`] = `

<button class="pt-button default">
  Default button
</button>

`;
